# omniglot

./: .gitignore  README.md  dataset.py  embedding_function.py  loss.py  playground.ipynb  pyproject.toml  train.py
