[tool.poetry]
name = "omniglot"
version = "0.1.0"
description = ""
authors = ["Afolabi Ajibade <a.ajibade@live.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
opencv-python = "^4.8.0.76"
matplotlib = "^3.7.2"
scikit-learn = "^1.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
black = "^23.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
